# vacao

./: .gitignore  LICENSE  README.md  config.example.json
app/: index.html  package-lock.json  package.json
app/samples/: clean-pack.sample.json
app/src/: disable-context-menu.ts  ipc.ts  main.ts  polyfill-tauri-internals.ts  styles.css  titlebar.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/skill-bundle/: SKILL_INSTALL.md
app/src-tauri/src/: commands.rs  config.rs  delete.rs  lib.rs  main.rs  paths.rs  win_ps.rs
app/src-tauri/src/clean/: agent_tools.rs  browser_tools.rs  catalog.rs  cursor_storage.rs  items.rs  mod.rs  pack.rs  pack_export.rs  pack_types.rs  pack_validate.rs  targets.rs
app/src-tauri/src/scan/: categories.rs  job.rs  mod.rs
app/src/ui/: clean-tab.ts  scan-tab.ts  settings-tab.ts
skills/: SKILL_INSTALL.md
skills/disk-cleaner-pack/: BUILTIN_IDS.md  SKILL.md
skills/disk-cleaner-pack/schema/: clean-pack.schema.json
